Fixed: checkbox and rerender on delete

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
       </form>
       <hr size="3" color="white" />
       <div id="todoList">
-        <!-- <div class="todoItem">
+        <div class="todoItem">
           <div class="todoHeader">
-            <input type="checkbox" id="selectTodo" checked=true/>
+            <input type="checkbox" id="selectTodo" />
             <p id="todoName">Todo</p>
           </div>
           <button id="delButton">x</button>
-        </div> -->
+        </div>
       </div>
       <hr size="3" color="white" />
       <div id="todoOpts">
