--- a/index.html
+++ b/index.html
@@ -3,26 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Todo list</title>
+    <title>Todo List</title>
     <link rel="stylesheet" href="style.css" />
     <script src="script.js" defer></script>
   </head>
   <body>
     <div class="todoContainer">
-      <p>Todo list</p>
+      <p>Todo List</p>
       <form id="todoForm">
         <input type="text" id="todoInp" />
         <button type="submit">adicionar</button>
       </form>
       <hr size="3" color="white" />
       <div id="todoList">
-        <div class="todoItem">
-          <div class="todoHeader">
-            <input type="checkbox" id="selectTodo" />
-            <p id="todoName">Todo</p>
-          </div>
-          <button id="delButton">x</button>
-        </div>
+        <p>Crie uma nova tarefa!</p>
       </div>
     </div>
   </body>
