Cleanup: shortcut icon and console log on JSON

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Todo List</title>
     <link rel="stylesheet" href="src/style.css" />
     <script src="src/script.js" defer></script>
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
   </head>
   <body>
     <div class="todoContainer">
